--- a/app/src/main/res/drawable/messagebg1.xml
+++ b/app/src/main/res/drawable/messagebg1.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#93dc98" />
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="#addcdf" />
     <stroke
         android:width="0dip"
-        android:color="#93dc98" />
+        android:color="#addcdf" />
     <corners android:radius="10dip" />
     <padding
-        android:bottom="5dip"
-        android:left="5dip"
-        android:right="5dip"
-        android:top="5dip" />
+        android:bottom="0dip"
+        android:left="0dip"
+        android:right="0dip"
+        android:top="0dip" />
 </shape>
