--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -9,6 +9,7 @@
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:paddingTop="16dp"
+    android:background="#f3faff"
     tools:context="com.mys3soft.mys3chat.ActivityChat">
 
 
@@ -23,6 +24,32 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
+            <!--<TextView-->
+                <!--android:id="@+id/textView"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_gravity="right"-->
+                <!--android:layout_marginTop="10dp"-->
+                <!--android:layout_weight="6"-->
+                <!--android:background="@drawable/messagebg1"-->
+                <!--android:padding="18dp"-->
+                <!--android:text="Test"-->
+                <!--android:textColor="#000" />-->
+
+
+            <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginTop="10dp"-->
+                <!--android:layout_weight="6"-->
+                <!--android:background="@drawable/messagebg2"-->
+                <!--android:gravity="left"-->
+                <!--android:padding="18dp"-->
+                <!--android:text="Test"-->
+                <!--android:textColor="#000" />-->
+
+
 
         </LinearLayout>
     </ScrollView>
