--- a/app/src/main/res/layout/message_area.xml
+++ b/app/src/main/res/layout/message_area.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="bottom"
+    android:focusableInTouchMode="true"
     >
     <EditText
         android:layout_width="match_parent"
