--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#1c2764</color>
     <color name="colorPrimaryDark">#182158</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="messageTextColor">#000000</color>
 </resources>
