--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/et_FirstName_Rigister"
-        android:inputType="text"
+        android:inputType="textCapSentences"
         android:maxLines="1"
         android:hint="Firstname..."
         android:layout_marginLeft="10dip"
@@ -26,7 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/et_LastName_Rigister"
-        android:inputType="text"
+        android:inputType="textCapSentences"
         android:layout_marginLeft="10dip"
         android:layout_marginBottom="10dip"
         android:layout_marginRight="10dip"
