--- a/app/src/main/res/menu/menu_chat.xml
+++ b/app/src/main/res/menu/menu_chat.xml
@@ -7,8 +7,9 @@
 
     <item
         android:id="@+id/menu_deleteConservation"
-        app:showAsAction="never"
+        app:showAsAction="always"
         android:title="Clear Conservation"
+        android:icon="@android:drawable/ic_menu_delete"
         />
 
     <item
