--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -24,7 +24,8 @@
 
     <item
         android:id="@+id/menu_refresh"
-        app:showAsAction="never"
+        android:icon="@android:drawable/ic_menu_rotate"
+        app:showAsAction="always"
         android:title="Refresh"
         />
 
