--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -1,23 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#f3faff"
     android:orientation="vertical"
     android:paddingBottom="16dp"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:paddingTop="2dp"
-    android:background="#f3faff"
     tools:context="com.mys3soft.mys3chat.ActivityChat">
 
 
     <ScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight="20">
 
         <LinearLayout
@@ -27,28 +26,28 @@
             android:orientation="vertical">
 
             <!--<TextView-->
-                <!--android:id="@+id/textView"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_gravity="right"-->
-                <!--android:layout_marginTop="10dp"-->
-                <!--android:layout_weight="6"-->
-                <!--android:background="@drawable/messagebg1"-->
-                <!--android:padding="18dp"-->
-                <!--android:text="Test"-->
-                <!--android:textColor="#000" />-->
+            <!--android:id="@+id/textView"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="right"-->
+            <!--android:layout_marginTop="10dp"-->
+            <!--android:layout_weight="6"-->
+            <!--android:background="@drawable/messagebg1"-->
+            <!--android:padding="18dp"-->
+            <!--android:text="Test"-->
+            <!--android:textColor="#000" />-->
 
 
             <!--<TextView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_marginTop="10dp"-->
-                <!--android:layout_weight="6"-->
-                <!--android:background="@drawable/messagebg2"-->
-                <!--android:gravity="left"-->
-                <!--android:padding="18dp"-->
-                <!--android:text="Test"-->
-                <!--android:textColor="#000" />-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginTop="10dp"-->
+            <!--android:layout_weight="6"-->
+            <!--android:background="@drawable/messagebg2"-->
+            <!--android:gravity="left"-->
+            <!--android:padding="18dp"-->
+            <!--android:text="Test"-->
+            <!--android:textColor="#000" />-->
 
 
         </LinearLayout>
@@ -61,7 +60,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:gravity="bottom" />
-
 
 
 </LinearLayout>
