--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#182158</color>
     <color name="colorAccent">#1c2764</color>
     <color name="messageTextColor">#000000</color>
+    <color name="tabsIndicatorColor">#ffffff</color>
 </resources>
