--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:emojicon="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -15,21 +14,25 @@
 
     tools:context="com.mys3soft.mys3chat.ActivityChat">
 
-
-    <ScrollView
-        android:id="@+id/scrollView"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swiperefresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="20"
-        >
+        android:layout_height="match_parent">
 
-        <LinearLayout
-            android:id="@+id/layout1"
+
+        <ScrollView
+            android:id="@+id/scrollView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            android:layout_weight="20">
 
-            <!--<hani.momanii.supernova_emoji_library.Helper.EmojiconTextView-->
+            <LinearLayout
+                android:id="@+id/layout1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <!--<hani.momanii.supernova_emoji_library.Helper.EmojiconTextView-->
                 <!--android:id="@+id/textView"-->
                 <!--android:layout_width="wrap_content"-->
                 <!--android:layout_height="wrap_content"-->
@@ -42,42 +45,44 @@
                 <!--emojicon:emojiconSize="45sp"-->
                 <!--emojicon:emojiconUseSystemDefault="true" />-->
 
-            <!--<TextView-->
-            <!--android:id="@+id/textView"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_gravity="right"-->
-            <!--android:layout_marginTop="10dp"-->
-            <!--android:layout_weight="6"-->
-            <!--android:background="@drawable/messagebg1"-->
-            <!--android:padding="18dp"-->
-            <!--android:text="Test"-->
-            <!--android:textColor="#000" />-->
+                <!--<TextView-->
+                <!--android:id="@+id/textView"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_gravity="right"-->
+                <!--android:layout_marginTop="10dp"-->
+                <!--android:layout_weight="6"-->
+                <!--android:background="@drawable/messagebg1"-->
+                <!--android:padding="18dp"-->
+                <!--android:text="Test"-->
+                <!--android:textColor="#000" />-->
 
 
-            <!--<TextView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginTop="10dp"-->
-            <!--android:layout_weight="6"-->
-            <!--android:background="@drawable/messagebg2"-->
-            <!--android:gravity="left"-->
-            <!--android:padding="18dp"-->
-            <!--android:text="Test"-->
-            <!--android:textColor="#000" />-->
+                <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginTop="10dp"-->
+                <!--android:layout_weight="6"-->
+                <!--android:background="@drawable/messagebg2"-->
+                <!--android:gravity="left"-->
+                <!--android:padding="18dp"-->
+                <!--android:text="Test"-->
+                <!--android:textColor="#000" />-->
 
 
-        </LinearLayout>
+            </LinearLayout>
 
-    </ScrollView>
+        </ScrollView>
+
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+
 
     <include
         layout="@layout/message_area"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:gravity="bottom"
-        />
+        android:gravity="bottom" />
 
 
 </LinearLayout>
